--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,15 +1,13 @@
-index.html
-
 <!DOCTYPE html>
 	<html>
-
 		<head>
 			<title></title>
-		
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+		</head>
 
 		<body>
 			<h1>Business Insnider</h1>
 			<p>This is the business of Gabriel Snider</p>
+			<p>The is the secret headquarters of Gabriel Snider</p>
 		</body>
-
-		
+	</html>
