--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Business Insnider</h1>
-	<p>The is the secret headquarters of Gabriel Snider</p>
+	<h1>Gabriel Snider's Resume</h1>
+	<p>This is the resume of Gabriel Snider</p>
 </body>
 </html>
