--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
 	<title>Gabriel Snider's Resume</title>
+
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
+
 <body>
-	<h1>Gabriel Snider's Resume</h1>
-	<p>This is the resume of Gabriel Snider</p>
+
+	<h1>Gabe Snider</h1>
+
+	<p>Check out my resume while you're here!</p>
+
 </body>
+
 </html>
