fix broken image

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,20 +7,20 @@
 <body>
 	<h1 id="slogan">Hi, I'm Gabe.</h1>
 
-	<img src="DSC01490.jpg" alt="Uluru">
+	<img src="file://Desktop/gabesnider.github.io/unit_3/images/DSC01490.jpg" alt="Uluru">
 
 	<p>Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
 
 	<ul>
 		<li>About</li>
 		<li>Skills</li>
-			<ol>
+			<ul>
 				<li>Java</li>
 				<li>Python</li>
 				<li>Perl</li>
 				<li>Scheme</li>
 				<li>Ruby</li>
-			</ol>
+			</ul>
 		<li>Experience</li>
 		<p>Over my high school and college careers, I have volunteered at <a href="http://lostdogrescue.org/participate/volunteer/">LDCRF (Lost Dog And Cat Rescue Foundation</a>, <a href="http://www.keengreaterdc.org/">KEEN (Kids Enjoy Exercise Now)</a>.</p>
 		<li>Education</li>
