--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h1 id="slogan">Hi, I'm Gabe.</h1>
 
-	<img src="images/DSC01490.jpg" alt="Uluru">
+	<img src="images/DSC01005.JPG" alt="Uluru">
 
 	<p>Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
 
