--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -22,7 +22,7 @@
 				<li>Ruby</li>
 			</ul>
 		<li>Experience</li>
-		<p>Over my high school and college careers, I have volunteered at <a href="http://lostdogrescue.org/participate/volunteer/">LDCRF (Lost Dog And Cat Rescue Foundation</a>, <a href="http://www.keengreaterdc.org/">KEEN (Kids Enjoy Exercise Now)</a>.</p>
+		<p id="experience">Over my high school and college careers, I have volunteered at <a href="http://lostdogrescue.org/participate/volunteer/">LDCRF (Lost Dog And Cat Rescue Foundation</a>, <a href="http://www.keengreaterdc.org/">KEEN (Kids Enjoy Exercise Now)</a>.</p>
 		<li>Education</li>
 		<li>Contact</li>
 	</ul>
