--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -2,31 +2,21 @@
 <html>
 <head>
 	<title>Gabriel Snider's Resume</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1 id="slogan">Hi, I'm Gabe.</h1>
 
-	<img src="images/DSC01005.JPG" alt="Uluru">
 
-	<p>Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
+	<p id="brand">Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
 
-	<ul>
-		<li>About</li>
-		<li>Skills</li>
-			<ul>
-				<li>Java</li>
-				<li>Python</li>
-				<li>Perl</li>
-				<li>Scheme</li>
-				<li>Ruby</li>
-			</ul>
-		<li>Experience</li>
-		<p id="experience">Over my high school and college careers, I have volunteered at <a href="http://lostdogrescue.org/participate/volunteer/">LDCRF (Lost Dog And Cat Rescue Foundation</a>, <a href="http://www.keengreaterdc.org/">KEEN (Kids Enjoy Exercise Now)</a>.</p>
-		<li>Education</li>
-		<li>Contact</li>
+	<ul id="nav">
+		<li id="navAbout"><a href="#">About</a></li>
+		<li id="navSkills"><a href="#">Skills</a></li>
+		<li id="navExperience"><a href="#">Experience</a></li>
+		<li id="navEducation"><a href="#">Education</a></li>
+		<li id="navContact"><a href="mailto:gabelsnider@gmail.com">Contact</a></li>
 	</ul>
 	
-	<p>Contact me by <a href="mailto:gabelsnider@gmail.com">email</a></p>
-</body>
+	</body>
 </html>
