--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Leaflet Web Map</title>
-
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.7/leaflet.css"/>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.7/leaflet.js"></script>
-	<style>
-		#map {
-			width: 960px;
-			height: 500px;
-		}
-	</style>
+  <title>A Leaflet map!</title>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <style>
+    #map{ width: 900px; height: 500px; }
+  </style>
 </head>
 <body>
-	<div id="map">
-		
-	</div>
-	<script>
-		var map = L.map('map',{scrollWheelZoom:false}).setView([43.64701, -79.39425], 15);
 
-    	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-    	attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    	}).addTo(map);
+  <div id="map"></div>
 
+  <script>
 
-	</script>
+  // initialize the map
+  var map = L.map('map').setView([42.35, -71.08], 13);
+
+  // load a tile layer
+  L.tileLayer('http://tiles.mapc.org/basemap/{z}/{x}/{y}.png',
+    {
+      attribution: 'Tiles by <a href="http://mapc.org">MAPC</a>, Data by <a href="http://mass.gov/mgis">MassGIS</a>',
+      maxZoom: 17,
+      minZoom: 9
+    }).addTo(map);
+
+  </script>
 </body>
 </html>
