--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!DOCTYPE
 <html>
 <head>
   <title>A Leaflet map!</title>
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
   <style>
-    #map{ width: 900px; height: 500px; }
+   body {
+   	padding: 0;
+   	margin-right: 0;
+   }
+
+   html, body, #map {
+   	height: 100%;
+   	width: 100%;
+   }
+   }
   </style>
 </head>
 <body>
@@ -15,15 +24,13 @@
   <script>
 
   // initialize the map
-  var map = L.map('map').setView([42.35, -71.08], 13);
+  var map = L.map('map').setView([38.88911, -77.00639], 16), touch;
 
   // load a tile layer
-  L.tileLayer('http://tiles.mapc.org/basemap/{z}/{x}/{y}.png',
-    {
-      attribution: 'Tiles by <a href="http://mapc.org">MAPC</a>, Data by <a href="http://mass.gov/mgis">MassGIS</a>',
-      maxZoom: 17,
-      minZoom: 9
-    }).addTo(map);
+  L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  	subdomains: 'abc',
+  	maxZoom: 18
+	}).addTo(map);
 
   </script>
 </body>
