--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gabriel Snider's Resume</title>
+	<title>Gabe Snider</title>
+	<link rel="shortcut icon" type="image/x-icon" href="images/Weather-Sun-icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1 id="slogan">Hi, I'm Gabe.</h1>
 
-
-	<p id="brand">Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
+	<p id="brand statement">Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
 
 	<ul id="nav">
 		<li id="navAbout"><a href="#">About</a></li>
