--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -7,17 +7,22 @@
 </head>
 
 <body>
-	<h1 id="slogan">Hi, I'm Gabe.</h1>
+	<header>
+		<h1 id="slogan">Hi, I'm Gabe.</h1>
 
-	<p id="brand statement">Creative, diligent, outside-the-box thinker. Wanting to contribute innovative ideas to and collaborate with a team. Java developer, public-spirited visionary, and the glue of the group. Fixer of problems. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
+		<p id="brand statement"> Java developer, public-spirited visionary, innovator and collaborator. Fixer of problems and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
+	</header>
 
-	<ul id="nav">
+	<nav>
 		<li id="navAbout"><a href="#">About</a></li>
 		<li id="navSkills"><a href="#">Skills</a></li>
 		<li id="navExperience"><a href="#">Experience</a></li>
 		<li id="navEducation"><a href="#">Education</a></li>
 		<li id="navContact"><a href="mailto:gabelsnider@gmail.com">Contact</a></li>
-	</ul>
+	</nav>
 	
-	</body>
+	<footer>
+		
+	</footer>
+</body>
 </html>
