--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -1,37 +1,65 @@
 <!DOCTYPE
 <html>
-<head>
-  <title>A Leaflet map!</title>
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-  <style>
-   body {
-   	padding: 0;
-   	margin-right: 0;
-   }
 
-   html, body, #map {
-   	height: 100%;
-   	width: 100%;
-   }
-   }
+<head>
+
+  <title>Gabe's Leaflet Map!</title>
+
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+
+  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
+  <style>
+	
+	body {
+   		height: 100%;
+   		padding: 0;
+   		margin: 0;
+   	}
+
+   	#map {
+   		position: absolute;
+   		height: 100%;
+   		width: 100%;
+   	}
+
   </style>
+
 </head>
+
 <body>
 
   <div id="map"></div>
 
   <script>
 
-  // initialize the map
-  var map = L.map('map').setView([38.88911, -77.00639], 16), touch;
+  	var map = L.map('map').setView([38.88911, -77.00639], 16), touch;
 
-  // load a tile layer
-  L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  	subdomains: 'abc',
-  	maxZoom: 18
+  	L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  		subdomains: 'abc',
+  		maxZoom: 18
 	}).addTo(map);
 
+  	function onLocationFound(e) {
+  		var radius = e.accuracy / 2;
+
+  		L.marker(e.latlng).addTo(map);
+
+ 	 	L.circle(e.latlng).addTo(map).openPopup();
+  	}
+
+  	function onLocationError(e) {
+  		alert(e.message);
+  	}
+
+  	map.on('locationfound', onLocationFound);
+  	map.on('locationerror', onLocationError);
+  	map.locate({setView: true, maxZoom: 16});
+  
+
+  	
   </script>
+
 </body>
+
 </html>
