--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,6 +6,16 @@
 	<link rel="shortcut icon" type="image/x-icon" href="images/Weather-Sun-icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
+
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -13,27 +23,39 @@
 
 		<header>
 
-			<h1 id="slogan">Hi, I'm Gabe.</h1>
+		<section id="twocolumn" class="clearfix">
 
-			<p id="brandstatement"> Java developer, public-spirited visionary, innovator and collaborator. Fixer of problems and the glue of the group. Productive and quick-witted with a spunky personality. Eager to learn and ready to tackle challenging problems with nuanced technological approaches.</p>
+			<h1 id="slogan">hi, i'm gabe.</h1>
+			
+			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
 
+		</section>
+		
 		</header>
 
 		<nav>
-			<a href="#">About</a>
-			<a href="#">Skills + Experience</a>
-			<a href="mailto:gabelsnider@gmail.com">Contact</a>
+			<a href="#about">about</a>
+			<a href="#experience">skills + experience</a>
+			<a href="mailto:gabelsnider@gmail.com">contact</a>
 		</nav>
 
 	</div>
 
-	<section id="about">
-		<div>
-
-		<p>I am 21 years old. I was born and raised in the suburbs of D.C. and educated in Saratoga Springs. I am a highly motivated computer science major at Skidmore College, expected to graduate in May of 2017. I am a lifelong learner fluent in Java Object Oriented Programming, and passionate about learning other programming languages as well. Traveling means the world to me. I divide my time between laughing too loud, petting strangers’ dogs, and working on coding projects I think are worthwhile and challenging. Recently I built an interactive map with Leaflet.JS, APIs, and Open Street Maps. Check it out here: (link)</p>
-		<p>Here’s a timeline: Second grade: I learn to type with my hands under a shoebox and get peanut butter stuck in my keyboard.Fifth grade: The F key still doesn’t work so I play with Paint in class. Command+Option+Arrow Right to college. Freshman year: I begin my pursuit of a bachelor’s in biology because I think genes are pretty. Sophomore year: I switch to math on the basis of “I was good at algebra in high school”. I take my first coding class, really just so I can sit next to my two best friends. I wind up ignoring my friends and finding my new major.</p>
-		<p>My goal is to become a UX and web designer. I have an eye for design and believe that aesthetic has the power to enhance the the user experience. However, I am seeking to cultivate as much information and knowledge as my brain can store. I am interested in AI, web and software development, and game programming. Photography and videography are both huge hobbies of mine (link to photos), along with rock climbing, and playing Super Smash Brothers. Oh, and I love Kix cereal.</p>
+	<div id="about">
+		<div id="aboutps1">
+			<p>I was born and raised near DC and I am earning my Bachelors degree at Skidmore College in NY, where I study mostly computer science. I am fluent in Java Object Oriented Programming, and I can’t wait to learn more languages and technologies.</p>
 		</div>
-	</section>	
+		<div id="aboutps2">
+			<p>Traveling means the world to me. I divide my time between laughing too loud, petting strangers’ dogs, and working on coding projects I think are worthwhile and challenging.</p>
+		</div>
+		<div id="aboutps3">
+			<p>My latest project is an interactive map that I built with LeafletJS and Open Street Maps. Check it out here: (link></p>
+		</div>
+		<div id="aboutps4">
+			<p>My goal is to become a UX and web designer. I have an eye for design and believe that aesthetic has the power to enhance the the user experience. However, I am seeking to cultivate as much information and knowledge as my brain can store. I am interested in AI, web and software development, and game programming. Photography and videography are both huge hobbies of mine (link to photos), along with rock climbing, and playing Super Smash Brothers.</p>
+		</div>
+		</div>
+	</div>
+
 </body>
 </html>
