--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -29,15 +29,17 @@
 
 	</div>
 
-		<div id="about">
-		<div id="aboutps1">
-			<p>I was born and raised near DC and I am earning my Bachelors degree at Skidmore College in NY, where I study mostly computer science. I am fluent in Java Object Oriented Programming, and I can’t wait to learn more languages and technologies.</p>
-			<p>Traveling means the world to me. I divide my time between laughing too loud, petting strangers’ dogs, and working on coding projects I think are worthwhile and challenging.</p>
-			<p>My latest project is an interactive map that I built with LeafletJS and Open Street Maps. Check it out here: (link></p>
-			<p>My goal is to become a UX and web designer. I have an eye for design and believe that aesthetic has the power to enhance the the user experience. However, I am seeking to cultivate as much information and knowledge as my brain can store. I am interested in AI, web and software development, and game programming. Photography and videography are both huge hobbies of mine (link to photos), along with rock climbing, and playing Super Smash Brothers.</p>
- 		</div>
-	</div>
+	<div id="aboutme">
 
+		<div id="contentabout">
+			<p>YES</p>
+		</div>
+
+		<div id="aboutpicture">
+			<img src="images/BEN_3825.jpg">
+		</div>
+
+	</div>
 
 </body>
 </html>
