--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -29,14 +29,27 @@
 
 	</div>
 
-	<div id="aboutme">
+	<div id="aboutme" class="clearfix">
 
 		<div id="contentabout">
-			<p>YES</p>
+			<p>I got it to work</p>
 		</div>
 
 		<div id="aboutpicture">
+			<h2>About. me.</h2>
 			<img src="images/BEN_3825.jpg">
+		</div>
+
+	</div>
+
+	<div id="me" class="clearfix">
+
+		<div id="contentme">
+			<p>I got it to work</p>
+		</div>
+
+		<div id="mepicture">
+			<img src="images/gabeonrock.jpg">
 		</div>
 
 	</div>
