--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -22,7 +22,7 @@
 		</section>
 
 		<nav>
-			<a href="#about">about</a>
+			<a href="#aboutme">about</a>
 			<a href="#experience">skills + experience</a>
 			<a href="mailto:gabelsnider@gmail.com">contact</a>
 		</nav>
@@ -31,25 +31,27 @@
 
 	<div id="aboutme" class="clearfix">
 
-		<div id="contentabout">
-			<p>I got it to work</p>
+		<div id="firstpicture">
+			<img src="images/rice.jpg">
 		</div>
 
-		<div id="aboutpicture">
-			<h2>About. me.</h2>
-			<img src="images/BEN_3825.jpg">
+		<div id="firstcontent">
+			<p>About. me.</p>
+			<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.</p>
+			<p>Motto: Can't stop, won't stop.</p>
+			<p>I hate incomplete</p>
 		</div>
 
 	</div>
 
-	<div id="me" class="clearfix">
+	<div id="meagain" class="clearfix">
 
 		<div id="contentme">
 			<p>I got it to work</p>
 		</div>
 
 		<div id="mepicture">
-			<img src="images/gabeonrock.jpg">
+			<img src="images/gabewithcomputer copy.jpg">
 		</div>
 
 	</div>
