--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -51,7 +51,7 @@
 		</div>
 
 		<div id="mepicture">
-			<img src="images/gabewithcomputer copy.jpg">
+			<img src="images/gabewithcomputer.jpg">
 		</div>
 
 	</div>
