--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -29,6 +29,10 @@
 
 	</div>
 
+	<div id="headaboutme">
+		<h1>about me.</h1>
+	</div>
+
 	<div id="aboutme" class="clearfix">
 
 		<div id="firstpicture">
