--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -60,5 +60,15 @@
 
 	</div>
 
+	<div id="skills">
+		<div id="skillspicture">
+			<img src="images/streetart.jpg">
+		</div>
+
+		<div id="myskills">
+			<p>These are my qualifications. Check out my resume here!</p>
+		</div>
+	</div>
+
 </body>
 </html>
