--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -23,7 +23,7 @@
 
 		<nav>
 			<a href="#aboutme">about</a>
-			<a href="#experience">skills + experience</a>
+			<a href="#skills">skills + experience</a>
 			<a href="mailto:gabelsnider@gmail.com">contact</a>
 		</nav>
 
