--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -3,9 +3,13 @@
 <head>
 
 	<title>Gabe Snider</title>
+
 	<link rel="shortcut icon" type="image/x-icon" href="images/Weather-Sun-icon.png" />
+
 	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<meta charset="utf-8">
+	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -16,7 +20,7 @@
 
 		<section id="twocolumn" class="clearfix">
 
-			<h1 id="slogan">hi, i'm gabe.</h1>
+			<p id="slogan">hi, i'm gabe.</p>
 			
 			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
 
@@ -36,15 +40,11 @@
 
 	<div id="aboutme" class="clearfix">
 
-		<div id="firstpicture">
-			<img src="images/rice.jpg">
-		</div>
+		<img src="images/rice.jpg" id="firstpicture">
 
 		<div id="firstcontent">
-			<p>About. me.</p>
-			<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.</p>
-			<p>Motto: Can't stop, won't stop.</p>
-			<p>I hate incomplete</p>
+			<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.
+			I hate incomplete</p>
 		</div>
 
 	</div>
@@ -52,12 +52,10 @@
 	<div id="meagain" class="clearfix">
 
 		<div id="contentme">
-			<p>Double major in computer science and confidence/p>
+			<p>Double major in computer science and awesomeness</p>
 		</div>
 
-		<div id="mepicture">
-			<img src="images/gabewithcomputer.jpg">
-		</div>
+		<img src="images/gabewithcomputer.jpg" id="mepicture">
 
 	</div>
 
@@ -66,16 +64,24 @@
 	</div>
 
 	<div id="skills">
-		<div id="skillspicture">
-			<img src="images/streetart.jpg">
-		</div>
+
+		<img src="images/streetart.jpg" id="skillspicture">
 
 		<div id="myskills">
 			<p>These are my qualifications. Check out my resume here!</p>
 		</div>
+
 	</div>
 
-	<div id="moreskills"
+	<div id="moreskills">
+
+		<div id="evenmore">
+			<p>Here are some projects I was working on and finished!</p>
+		</div>
+
+		<img src="images/watching.jpg" id="moreskillspicture">
+		
+	</div>
 
 </body>
 </html>
