--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -40,7 +40,7 @@
 
 	<div id="aboutme" class="clearfix">
 
-		<img src="images/rice.jpg" id="firstpicture">
+		<img src="images/rice.jpg" id="firstimage">
 
 		<div id="firstcontent">
 			<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.
