--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -27,8 +27,8 @@
 		</section>
 
 		<nav>
-			<a href="#aboutme">about</a>
-			<a href="#skills">skills + experience</a>
+			<a href="#headaboutme">about</a>
+			<a href="#headskills">skills + experience</a>
 			<a href="mailto:gabelsnider@gmail.com">contact</a>
 		</nav>
 
@@ -60,7 +60,7 @@
 	</div>
 
 	<div id="headskills">
-		<h1>my skills.</h1>
+		<h1>my skills + experience.</h1>
 	</div>
 
 	<div id="skills">
@@ -81,6 +81,24 @@
 
 		<img src="images/watching.jpg" id="moreskillspicture">
 		
+	</div>
+
+	<div id="headcontact">
+
+		<h1>contact me.</h1>
+
+	</div>
+
+	<div id="contact">
+
+		<img src="images/face.jpg" id="contactpicture">
+
+		<div id="contactcontent">
+
+			<p>Here's a few ways you can contact me!</p>
+
+		</div>
+
 	</div>
 
 </body>
