--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -1,105 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<title>Gabe Snider</title>
-
 	<link rel="shortcut icon" type="image/x-icon" href="images/Weather-Sun-icon.png" />
-
 	<link rel="stylesheet" type="text/css" href="style.css">
-
 	<meta charset="utf-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 
 <body>
 	<div id="sectionone">
-
-
 		<section id="twocolumn" class="clearfix">
 
 			<p id="slogan">hi, i'm gabe.</p>
 			
 			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
-
+			<nav>
+				<a href="#headaboutme">about</a>
+				<a href="#headskills">skills + experience</a>
+				<a href="mailto:gabelsnider@gmail.com">contact</a>
+			</nav>
 		</section>
-
-		<nav>
-			<a href="#headaboutme">about</a>
-			<a href="#headskills">skills + experience</a>
-			<a href="mailto:gabelsnider@gmail.com">contact</a>
-		</nav>
-
 	</div>
 
-	<div id="headaboutme">
+	<section id="headaboutme">
 		<h1>about me.</h1>
-	</div>
-
-	<div id="aboutme" class="clearfix">
-
-		<img src="images/rice.jpg" id="firstimage">
-
-		<div id="firstcontent">
-			<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.
-			I hate incomplete</p>
+		<div id="aboutme" class="clearfix">
+			<div class="about-pic"></div>
+			<div id="firstcontent">
+				<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.
+				I hate incomplete</p>
+			</div>
 		</div>
-
-	</div>
-
-	<div id="meagain" class="clearfix">
-
-		<div id="contentme">
-			<p>Double major in computer science and awesomeness</p>
+		<div id="meagain" class="clearfix">
+			<div class="meagain-pic"></div>
+			<div id="contentme">
+				<p>Double major in computer science and awesomeness</p>
+			</div>
 		</div>
-
-		<img src="images/gabewithcomputer.jpg" id="mepicture">
-
-	</div>
-
-	<div id="headskills">
+	</section>
+	<section id="headskills">
 		<h1>my skills + experience.</h1>
-	</div>
 
-	<div id="skills">
-
-		<img src="images/streetart.jpg" id="skillspicture">
-
-		<div id="myskills">
-			<p>These are my qualifications. Check out my resume here!</p>
+		<div id="skills">
+			<div class="skills-pic"></div>
+			<div id="myskills">
+				<p>These are my qualifications. Check out my resume here!</p>
+			</div>
+	
 		</div>
-
-	</div>
-
-	<div id="moreskills">
-
-		<div id="evenmore">
-			<p>Here are some projects I was working on and finished!</p>
+	
+		<div id="moreskills">
+			<div class="moreskills-pic"></div>
+			<div id="evenmore">
+				<p>Here are some projects I was working on and finished!</p>
+			</div>
 		</div>
-
-		<img src="images/watching.jpg" id="moreskillspicture">
-		
-	</div>
-
-	<div id="headcontact">
-
+	</section>
+	<section id="headcontact">
 		<h1>contact me.</h1>
-
-	</div>
-
-	<div id="contact">
-
-		<img src="images/face.jpg" id="contactpicture">
-
-		<div id="contactcontent">
-
-			<p>Here's a few ways you can contact me!</p>
-
+		<div id="contact">
+			<div class="contact-pic"></div>
+			<div id="contactcontent">
+				<p>Here's a few ways you can contact me!</p>
+			</div>
 		</div>
-
-	</div>
+	</section>
 
 </body>
 </html>
