--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -16,36 +16,35 @@
 			
 			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
 			<nav>
-				<a href="#headaboutme">about</a>
+				<a href="#headaboutme">about me</a>
 				<a href="#headskills">skills + experience</a>
-				<a href="mailto:gabelsnider@gmail.com">contact</a>
+				<a href="#headcontact">contact</a>
 			</nav>
 		</section>
 	</div>
 
 	<section id="headaboutme">
-		<h1>about me.</h1>
+		<h1>about me</h1>
 		<div id="aboutme" class="clearfix">
 			<div class="about-pic"></div>
 			<div id="firstcontent">
-				<p>IVF babe coneceived in NY. Born and raised in the burbs of D.C. I divide my time between laughing too loud and petting strangers' dogs. I take work very seriously. Not myself.
-				I hate incomplete</p>
+				<p>IVF babe coneceived in NY. Born and raised in the suburbs of D.C. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I take work seriously. Not myself. And I hate incomplete</p>
 			</div>
 		</div>
 		<div id="meagain" class="clearfix">
 			<div class="meagain-pic"></div>
 			<div id="contentme">
-				<p>Double major in computer science and awesomeness</p>
+				<p>Double major in computer science and awesomeness. Aspiring UX designer and dogfather. I have an eye for design and want to make the web a more user friendly place. I like reaching new heights and developing new skills. I want to be part of a tech team that pushes limits and expands possibilites. </p>
 			</div>
 		</div>
 	</section>
 	<section id="headskills">
-		<h1>my skills + experience.</h1>
+		<h1>skills + experience</h1>
 
 		<div id="skills">
 			<div class="skills-pic"></div>
 			<div id="myskills">
-				<p>These are my qualifications. Check out my resume here!</p>
+				<p>I love photography. And I'm pretty darn good at it too...<a href="#">take a look</a></p>
 			</div>
 	
 		</div>
@@ -53,16 +52,16 @@
 		<div id="moreskills">
 			<div class="moreskills-pic"></div>
 			<div id="evenmore">
-				<p>Here are some projects I was working on and finished!</p>
+				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf">resume</a> while you're here.</p>
 			</div>
 		</div>
 	</section>
 	<section id="headcontact">
-		<h1>contact me.</h1>
+		<h1>contact</h1>
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>Here's a few ways you can contact me!</p>
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com">email</a>. I have an account on <a href="https://github.com/gabesnider">GitHub</a>.</p>
 			</div>
 		</div>
 	</section>
