--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -14,7 +14,7 @@
 
 			<p id="slogan">hi, i'm gabe.</p>
 			
-			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
+			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my mind into reality.</p>
 			<nav>
 				<a href="#headaboutme">about me</a>
 				<a href="#headskills">skills + experience</a>
@@ -44,7 +44,7 @@
 		<div id="skills">
 			<div class="skills-pic"></div>
 			<div id="myskills">
-				<p>I love photography. And I'm pretty darn good at it too...<a href="#">take a look</a></p>
+				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf"><b>resume</b></a> while you're here.</p>
 			</div>
 	
 		</div>
@@ -52,7 +52,7 @@
 		<div id="moreskills">
 			<div class="moreskills-pic"></div>
 			<div id="evenmore">
-				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf">resume</a> while you're here.</p>
+				<p>I love photography. And I'm pretty darn good at it too...<a href="#"><b>take a look</b></a>.</p>
 			</div>
 		</div>
 	</section>
@@ -61,7 +61,7 @@
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com">email</a>. I have an account on <a href="https://github.com/gabesnider">GitHub</a>.</p>
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.</p>
 			</div>
 		</div>
 	</section>
