--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -6,15 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
+<div id="wrapper">
 	<div id="sectionone">
 		<section id="twocolumn" class="clearfix">
 
 			<p id="slogan">hi, i'm gabe.</p>
 			
-			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my brain into reality.</p>
+			<p id="brandstatement">Programmer, public-spirited visionary, innovator and collaborator. Fixer of problems and glue of the group. Diligent and quick-witted, I am always learning. Excited to build things from my mind into reality.</p>
 			<nav>
 				<a href="#headaboutme">about me</a>
 				<a href="#headskills">skills + experience</a>
@@ -44,7 +46,11 @@
 		<div id="skills">
 			<div class="skills-pic"></div>
 			<div id="myskills">
-				<p>I love photography. And I'm pretty darn good at it too...<a href="#">take a look</a></p>
+			<ul>
+				<li><a class="java lang-logo" href="https://d2f2p26ywennn8.cloudfront.net/assets/public/languages_2x-4bdfe240d9edd933984ad17656bdf5ad41f1f296e2c710ffc509e7d503e733b7.png"</li>
+				<li></li>
+			</ul>
+				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf"><b>resume</b></a> while you're here.</p>
 			</div>
 	
 		</div>
@@ -52,7 +58,7 @@
 		<div id="moreskills">
 			<div class="moreskills-pic"></div>
 			<div id="evenmore">
-				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf">resume</a> while you're here.</p>
+				<p>I love photography. And I'm pretty darn good at it too...<a href="#"><b>take a look</b></a>.</p>
 			</div>
 		</div>
 	</section>
@@ -61,10 +67,29 @@
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com">email</a>. I have an account on <a href="https://github.com/gabesnider">GitHub</a>.</p>
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.</p>
 			</div>
 		</div>
 	</section>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script>
+$(document).ready(function() {
+  $("a").on('click', function(event) {
+
+    if (this.hash !== "") {
+      event.preventDefault();
+
+      var hash = this.hash;
+
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function() {
+        window.location.hash = hash;
+      });
+    }
+  });
+});
+</script>
 
 </body>
 </html>
