--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -51,7 +51,7 @@
 		<div id="moreskills">
 			<div class="moreskills-pic"></div>
 			<div id="evenmore">
-				<p>I love photography. And I'm pretty darn good at it too...<a href="#"><b>take a look</b></a>.</p>
+				<p>I made a simulation Black Jack game in Java with object oriented programming using inheritance and mutliple classes. I recently built a leaflet map with Leaflet.JS. <a href="#"><b>Check it out.</b></a></p>
 			</div>
 		</div>
 	</section>
