--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -61,6 +61,10 @@
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
 				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.</p>
+				<ul>
+				<li>git</li>
+				<li>linkedin</li>
+				</ul>
 			</div>
 		</div>
 	</section>
