--- a/leaflet/index.html
+++ b/leaflet/index.html
@@ -5,9 +5,10 @@
 
   <title>Gabe's Leaflet Map!</title>
 
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+  <link rel="stylesheet" href="leaflet.css">
 
-  <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+  <script src="leaflet.js"></script>
+  <script src="leaflet-src.js"></script>
 
   <style>
 	
