--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -71,6 +71,28 @@
 			</div>
 		</div>
 	</section>
+	<section id="map">
+		<script>
+  	var map = L.map('map').setView([38.88911, -77.00639], 16), touch;
+  	L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  		subdomains: 'abc',
+  		maxZoom: 18
+	}).addTo(map);
+  	function onLocationFound(e) {
+  		var radius = e.accuracy / 2;
+  		L.marker(e.latlng).addTo(map);
+ 	 	L.circle(e.latlng).addTo(map).openPopup();
+  	}
+  	function onLocationError(e) {
+  		alert(e.message);
+  	}
+  	map.on('locationfound', onLocationFound);
+  	map.on('locationerror', onLocationError);
+  	map.locate({setView: true, maxZoom: 16});
+  
+  	
+  </script>
+	</section>
 <script>
 	$(document).ready(function() {
 	  $("a").on('click', function(event) {
