--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -30,7 +30,7 @@
 		<div id="aboutme" class="clearfix">
 			<div class="about-pic"></div>
 			<div id="firstcontent">
-				<p>IVF babe coneceived in NY. Born and raised in the suburbs of D.C. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I take work seriously. Not myself. And I hate incomplete</p>
+				<p>IVF babe coneceived in NY. Born and raised in the suburbs of D.C. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
 			</div>
 		</div>
 		<div id="meagain" class="clearfix">
@@ -60,11 +60,11 @@
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.</p>
-				<ul>
-				<li>git</li>
-				<li>linkedin</li>
-				</ul>
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.<br>
+					<img src="images/GitHub-Mark-64px.png">
+					<img src="">
+				</p>
+				
 			</div>
 		</div>
 	</section>
