--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -4,6 +4,9 @@
 	<title>Gabe Snider</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/Weather-Sun-icon.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,7 +33,7 @@
 		<div id="aboutme" class="clearfix">
 			<div class="about-pic"></div>
 			<div id="firstcontent">
-				<p>IVF babe coneceived in NY. Born and raised in the suburbs of D.C. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
+				<p>IVF babe coneceived in NY. Born and raised in the suburbs of DC. I divide my time between laughing too loudly and petting strangers' dogs. Traveling means the world to me. I do not take myself seriously. And I hate incomplete</p>
 			</div>
 		</div>
 		<div id="meagain" class="clearfix">
@@ -60,8 +63,8 @@
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.<br>
-					<img src="images/GitHub-Mark-64px.png">
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>. Rather than say goodbye, I say Hello World!<br>
+					<img src="">
 					<img src="">
 				</p>
 				
