--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -39,7 +39,7 @@
 		<div id="meagain" class="clearfix">
 			<div class="meagain-pic"></div>
 			<div id="contentme">
-				<p>Double major in computer science and awesomeness. Aspiring UX designer and dogfather. I have an eye for design and want to make the web a more user friendly place. I like reaching new heights and developing new skills. I want to be part of a tech team that pushes limits and expands possibilites. </p>
+				<p>Double major in computer science and awesomeness. Aspiring UX designer and dogfather. I have an eye for design and want to make the web a more user friendly place. I like reaching challenging heights and developing new skills. I want to be part of a tech team that pushes my limits and expands the notion of what is possibile. </p>
 			</div>
 		</div>
 	</section>
@@ -48,13 +48,16 @@
 		<div id="skills">
 			<div class="skills-pic"></div>
 			<div id="myskills">
-				<p>I am profiecient in Java and am familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf"><b>resume</b></a> while you're here.</p>
+				<p><img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/java-logo_2x-32beae8858499f7f2efa4f60cb0e641be46086c894b2c19ba3a2ed125c17098c.png" id="java-lang-logo">
+				<img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/python-logo_2x-999c8c56554e563b0bdf5fca4dda5752c2cc37cfe35a17ccd0f793a7cb6b120b.png" id="python-lang-logo">
+				<img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/node-logo_2x-2023f89872fa8c0f710dc26eb28f48baf14bfb4a41909f92350592e15a7f9eac.png" id="js-lang-logo"><br>
+				I am profiecient in Java and familiar with a range of other programming languages. Take a look at my <a href="docs/Gabriel Snider Resume.pdf"><b>resume</b></a> while you're here.</p>
 			</div>
 		</div>
 		<div id="moreskills">
 			<div class="moreskills-pic"></div>
 			<div id="evenmore">
-				<p>I made a simulation Black Jack game in Java with object oriented programming using inheritance and mutliple classes. I recently built a leaflet map with Leaflet.JS. <a href="#"><b>Check it out.</b></a></p>
+				<p>I made a simulation Black Jack game in Java with object oriented programming using inheritance and mutliple classes. I recently built a tracking map with Leaflet.JS, APIs, and Open Street Maps. <a href="https://gabesnider.github.io/leaflet/index.html"><b>Check it out.</b></a></p>
 			</div>
 		</div>
 	</section>
