--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 	</section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	</div>
 <script>
 $(document).ready(function() {
   $("a").on('click', function(event) {
