--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -66,7 +66,7 @@
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. I have an account on <a href="https://github.com/gabesnider"><b>GitHub</b></a>. I am also on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>. Rather than say goodbye, I say Hello World!<br>
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. Check out my <a href="https://github.com/gabesnider"><b>GitHub</b></a>. Connect with me on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.Rather than say goodbye, I say Hello World!
 				</p>
 				
 			</div>
