--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -51,7 +51,7 @@
 				<p><img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/java-logo_2x-32beae8858499f7f2efa4f60cb0e641be46086c894b2c19ba3a2ed125c17098c.png" id="java-lang-logo" alt="java-lang-logo">
 				<img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/python-logo_2x-999c8c56554e563b0bdf5fca4dda5752c2cc37cfe35a17ccd0f793a7cb6b120b.png" id="python-lang-logo" alt="python-lang-logo">
 				<img src="https://d2f2p26ywennn8.cloudfront.net/assets/public/getting-started/node-logo_2x-2023f89872fa8c0f710dc26eb28f48baf14bfb4a41909f92350592e15a7f9eac.png" id="js-lang-logo" alt="js-lang-logo"><br>
-				I am fluent in Java object oriented programming and familiar with Python and JavaScript. Take a look at my <a href="docs/GabrielSniderResume.pdf"><b>resume</b></a> while you're here.</p>
+				I am fluent in Java object oriented programming have worked with several other programming langauges. Take a look at my <a href="docs/GabrielSniderResume.pdf"><b>resume</b></a> while you're here.</p>
 			</div>
 		</div>
 		<div id="moreskills">
