--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -60,13 +60,18 @@
 				<p>I made a simulation Black Jack game in Java with object oriented programming using inheritance and mutliple classes. I recently built a tracking map with Leaflet.JS, APIs, and Open Street Maps. <a href="https://gabesnider.github.io/leaflet/index.html"><b>Check it out.</b></a></p>
 			</div>
 		</div>
+		<div id="travelleaflet">
+			<script>
+
+			</script>
+		</div>
 	</section>
 	<section id="headcontact">
 		<h1>contact</h1>
 		<div id="contact">
 			<div class="contact-pic"></div>
 			<div id="contactcontent">
-				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. Check out my <a href="https://github.com/gabesnider"><b>GitHub</b></a>. Connect with me on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>.Rather than say goodbye, I say Hello World!
+				<p>You can reach me through <a href="mailto:gabelsnider@gmail.com"><b>email</b></a>. Check out my <a href="https://github.com/gabesnider"><b>GitHub</b></a>. Connect with me on <a href="https://www.linkedin.com/in/gabrielsnider"><b>LinkedIn</b></a>. Rather than say goodbye, I say Hello World!
 				</p>
 			</div>
 		</div>
