--- a/unit_10/index.html
+++ b/unit_10/index.html
@@ -7,9 +7,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
+	<link href="js/leaflet.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script type="text/javascript" src="js/leaflet-src.js"></script>
+	<script src="Leaflet.Sleep-master/Leaflet.Sleep.js"></script>
+
 </head>
 
 <body>
@@ -59,8 +63,11 @@
 			</div>
 		</div>
 	</section>
-	<div id="gabes-map"></div>
-	<script src="https://gabesnider.github.io/travelleaflet/index.html"></script>
+	<div id="gabesmap">
+		<div id="map">
+		<script type="text/javascript" src="js/gabestravelleaflet.js"></script>
+		</div>
+	</div>
 	<section id="headcontact">
 		<h1>contact</h1>
 		<div id="contact">
